added contact form function

--- a/app/globals.css
+++ b/app/globals.css
@@ -264,3 +264,14 @@ table {
   animation: blink .75s infinite;
   vertical-align: middle;
 }
+
+
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
